kubernetes/apps/default/palworld/dashboard/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: palworld-dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: palworld-dashboard
